# node-spark

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
cmd/: root.go
internal/: extract.go  fetch.go  install.go  install_global.go  install_node.go  use.go  utils.go  windows.go
pkg/: config.go
src/: config.rs  main.rs
src/commands/: global_list.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs  use.rs
src/options/: mod.rs  verbose.rs  version.rs
src/utils/: download.rs  extract.rs  mod.rs
