[package]
name = "node-spark"
version = "0.1.0"
edition = "2021"
description = "A fast and efficient Node.js version manager written in Rust"
authors = ["Musa \"S42\" <songoku42@outlook.de>"]
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
directories = "5.0"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
indicatif = "0.17"
semver = "1.0"
